examples/kustomization/fleet-telemetry-consumer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-telemetry-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet-telemetry-consumer
  template:
    metadata:
      labels:
        app: fleet-telemetry-consumer
    spec:
      containers:
        - name: tesla-http-proxy
          image: tesla/vehicle-command:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4443
          volumeMounts:
            - name: fleet-api
              mountPath: /secrets/fleet-api
            - name: tesla-ssl
              mountPath: /secrets/tesla-ssl
        - name: fleet-telemetry-consumer
          image: quay.io/rajsinghcpre/fleet-telemetry-consumer:refactor
          # command: ["sleep", "infinity"]
          command: ["/app/main"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: tesla-ssl
              mountPath: /app/secrets/tesla-ssl
            - name: fleet-api
              mountPath: /app/secrets/fleet-api
            - name: pg
              mountPath: /app/secrets/pg
            - name: fleet-telemetry-ssl
              mountPath: /app/secrets/fleet-telemetry-ssl
      volumes:
        - name: tesla-ssl
          secret:
            secretName: tesla-raj-tls
        - name: fleet-telemetry-ssl
          secret:
            secretName: fleet-telemetry-tesla-raj-tls
        - name: fleet-api
          secret:
            secretName: tesla-fleet-api
        - name: pg
          secret:
            secretName: fleet-telemetry-consumer-db-app
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-telemetry-consumer
spec:
  selector:
    app: fleet-telemetry-consumer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fleet-telemetry-consumer
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "tesla.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: fleet-telemetry-consumer
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
