examples/kustomization/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: fleet-telemetry
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
  hostnames:
    - fleet-telemetry.tesla.rajsingh.info
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: fleet-telemetry
          port: 8443
          weight: 1
